Expanding Black Box Test: CREATE DB, USE Tests